Fix contrast on Download CV link

--- a/docroot/css/style.css
+++ b/docroot/css/style.css
@@ -1053,7 +1053,7 @@ a {
 
 .section.cv a:hover,
 .section.cv a:focus {
-  color: #f6a26d;
+  color: #383838;
 }
 
 .intro {
